--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <main>
         <img src="img/image-qr-code.png" alt="QR">
         <p class="first">Improve your front-end skills by building projects</p>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    </main>
 </body>
 </html>
