--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>QR Code - Front End Mentor</title>
 </head>
 <body>
     <main>
         <img src="img/image-qr-code.png" alt="QR">
-        <p class="first">Improve your front-end skills by building projects</p>
+        <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
 </body>
